RESOLVED FIXED178208
Undefined WK_API_ENABLED warning when compiling COCOA content on WebKitGTK+
https://bugs.webkit.org/show_bug.cgi?id=178208
Summary Undefined WK_API_ENABLED warning when compiling COCOA content on WebKitGTK+
Tomas Popela
Reported 2017-10-12 05:37:28 PDT
../../Tools/WebKitTestRunner/TestController.cpp:2300:5: warning: "WK_API_ENABLED" is not defined, evaluates to 0 [-Wundef] #if WK_API_ENABLED ^~~~~~~~~~~~~~
Attachments
Patch (1.34 KB, patch)
2017-10-12 05:44 PDT, Tomas Popela
no flags
Patch (1.64 KB, patch)
2017-10-17 02:33 PDT, Tomas Popela
rniwa: review+
Tomas Popela
Comment 1 2017-10-12 05:44:41 PDT
Tomas Popela
Comment 2 2017-10-17 02:31:05 PDT
A new one appeared: ../../Tools/WebKitTestRunner/TestController.cpp:2323:5: warning: "WK_API_ENABLED" is not defined, evaluates to 0 [-Wundef] #if WK_API_ENABLED ^~~~~~~~~~~~~~
Tomas Popela
Comment 3 2017-10-17 02:33:56 PDT
Tomas Popela
Comment 4 2017-10-17 02:39:00 PDT
Radar WebKit Bug Importer
Comment 5 2017-10-17 02:39:37 PDT
Note You need to log in before you can comment on or make changes to this bug.