Undefined WK_API_ENABLED warning when compiling COCOA content on WebKitGTK+ https://bugs.webkit.org/show_bug.cgi?id=178208

Check whether we are on COCOA platform before checking for
WK_API_ENABLED.

Reviewed by Ryosuke Niwa.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::clearDOMCache):

Canonical link: https://commits.webkit.org/194606@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223502 268f45cc-cd09-0410-ab3c-d52691b4dbfc